syntax = "proto3";

package pb;
option go_package="./pb";

service Moment {
  rpc Publish(PublishRequest) returns (PublishResponse);
}

message PublishRequest {
  int64 userId = 1;
  string content = 2;
}

message PublishResponse {
  int64 momentId = 1;
}